--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ rev/
 renamed-files/
 backup/
 training_data_picture_model_cnn/
+.vscode/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
