--- a/requirements.txt
+++ b/requirements.txt
@@ -32,31 +32,35 @@ nvidia-cublas-cu11==11.11.3.6
 nvidia-cudnn-cu11==8.6.0.163
 oauthlib==3.2.2
 opencv-contrib-python==4.7.0.72
-opencv-python==4.7.0.72
 opt-einsum==3.3.0
-packaging==23.1
+packaging @ file:///croot/packaging_1678965309396/work
 Pillow==9.5.0
+ply==3.11
 protobuf==3.20.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyparsing==3.0.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.1
 python-dateutil==2.8.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.2.2
 scipy==1.10.1
+sip @ file:///tmp/abs_44cd77b_pu/croots/recipe/sip_1659012365470/work
 six==1.16.0
 sounddevice==0.4.6
 tensorboard==2.12.2
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
+tensorflow-cpu==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.2.0
 threadpoolctl==3.1.0
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
 typing_extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.2.3
